Support repeated flags
A flag can be repeated by making its values an array instead of a single
value.

flags:
  env:
    - FOO=BAR
    - STUFF=THINGS

is turned into

--env FOO=BAR --env STUFF=THINGS

--- a/pkg/aws/testdata/step-input-invalid.yaml
+++ b/pkg/aws/testdata/step-input-invalid.yaml
@@ -8,8 +8,4 @@ aws:
     image-id: ami-xxxxxxxx
     instance-type: t2.micro
     env:
-    - FOO=BAR
-    - STUFF=THINGS
-  outputs:
-    - name: "INSTANCE_ID"
-      jsonPath: "$.Instances[0].InstanceId"
+    - foo: [ "stuff", "things"]
