Use exec mixin's builder
The logic for unmarshaling, flags, output, etc is now in the exec mixin. Bump porter and reuse as much as we can.

--- a/pkg/aws/testdata/invoke-input.yaml
+++ b/pkg/aws/testdata/invoke-input.yaml
@@ -3,5 +3,6 @@ list:
       description: "List Buckets"
       service: s3api
       operation: list-buckets
-      flags:
-        query: "Buckets[].Name"
+      outputs:
+        - name: buckets
+          jsonPath: '$Buckets[*].Name'
