--- a/pkg/aws/testdata/uninstall-input.yaml
+++ b/pkg/aws/testdata/uninstall-input.yaml
@@ -4,4 +4,4 @@ uninstall:
       service: ec2
       operation: terminate-instances
       flags:
-        instance-ids: "i-5203422c i-5203422d"
+        instance-ids: '"i-5203422c i-5203422d"'
